Add coingecko package for fetching TON price from CoinGecko API

--- a/enclaves/get-simple-price/Makefile
+++ b/enclaves/get-simple-price/Makefile
@@ -1,16 +1,19 @@
-SRC := $(wildcard *.go)
+SRC := $(wildcard *.go) $(wildcard */*.go)
 
 all: format test audit enclave
 
 .PHONY: test
 test:
-	 go test ./... -coverprofile=coverage.out
+	 go test -v ./... -coverprofile=coverage.out
+
+.PHONY: test
+test-integration:
+	 go test -v ./... -coverprofile=coverage.out --tags=integration
 
 .PHONY: tidy
 format:
 	go fmt ./...
 	go mod tidy -v
-
 
 .PHONY: audit
 audit:
