Switch to ego-go compiler
- Update compilation commands to use ego-go
- Set Go version to 1.21.8 to meet ego-go requirements
- Include enclave configuration file for ego-go usage
- Add make command to fetch CA certificates for enclave

--- a/enclaves/get-simple-price/Makefile
+++ b/enclaves/get-simple-price/Makefile
@@ -4,25 +4,42 @@ all: format test audit enclave
 
 .PHONY: test
 test:
-	 go test -v ./... -coverprofile=coverage.out
+	 ego-go test -v ./... -coverprofile=coverage.out
 
 .PHONY: test
 test-integration:
-	 go test -v ./... -coverprofile=coverage.out --tags=integration
+	 ego-go test -v ./... -coverprofile=coverage.out --tags=integration
 
 .PHONY: tidy
 format:
-	go fmt ./...
-	go mod tidy -v
+	ego-go fmt ./...
+	ego-go mod tidy -v
 
 .PHONY: audit
 audit:
-	go mod verify
-	go vet ./...
+	ego-go mod verify
+	ego-go vet ./...
 
-enclave: $(SRC) go.mod go.sum
-	go build
+enclave: proto $(SRC) go.mod go.sum cacert.pem cacert.pem.sha256 enclave.json
+	sha256sum -c cacert.pem.sha256
+	ego-go build
+
+proto: ereport/private_keys_report.pb.go
+
+ereport/private_keys_report.pb.go: ereport/private_keys_report.proto
+	protoc --go_out=paths=source_relative:./ -I. ereport/private_keys_report.proto
+
+cacert.pem: cacert.pem.sha256
+	# https://curl.se/docs/caextract.html
+	wget https://curl.se/ca/cacert.pem
+
+cacert.pem.sha256:
+	wget https://curl.se/ca/cacert.pem.sha256
 
 .PHONY: clean
 clean:
 	go clean
+	rm -f coverage.out
+	rm -f cacert.pem.sha256 cacert.pem
+	rm -f mount/*
+	rm -f public.pem private.pem
