--- a/.github/workflows/verify-contract.yml
+++ b/.github/workflows/verify-contract.yml
@@ -24,6 +24,7 @@ jobs:
           ADDRESS="${{ github.event.inputs.CONTRACT_ADDRESS }}"
           MEASUREMENT="${{ github.event.inputs.EXPECTED_MEASUREMENT }}"
 
+          set -o pipefail
           {
             echo "### Verifying Contract"
             echo "- **Contract Address:** [$ADDRESS](https://tonscan.org/address/$ADDRESS)"
@@ -35,9 +36,9 @@ jobs:
               "$ADDRESS" \
               "$MEASUREMENT" 2>&1
             VERIFICATION_STATUS=$?
-          } | tee -a "$GITHUB_STEP_SUMMARY"
 
-          if [ $VERIFICATION_STATUS -ne 0 ]; then
-            echo "❌ Contract attestation report was not verified" | tee -a "$GITHUB_STEP_SUMMARY"
-            exit 1
-          fi
+            if [ $VERIFICATION_STATUS -ne 0 ]; then
+                echo "❌ Contract attestation report was not verified"
+                exit 1
+            fi            
+          } | tee -a "$GITHUB_STEP_SUMMARY"
