Move eresp package to github.com/tonteeton/golib
* Switch to changed eresp functionality
* Add appconf package for application-specific configuration management
* Add priceresp package for prices response serialization

--- a/enclaves/get-simple-price/Makefile
+++ b/enclaves/get-simple-price/Makefile
@@ -6,7 +6,7 @@ all: format test audit enclave
 test:
 	 ego-go test -v ./... -coverprofile=coverage.out
 
-.PHONY: test
+.PHONY: test-integration
 test-integration:
 	 ego-go test -v ./... -coverprofile=coverage.out --tags=integration
 
